2004-11-26  Gary Cramblitt (PhantomsDad)
        * Slight throughput improvement by eliminating pause at start of each Festival utterance.
        * Bug fix.  Can find synthesizers when HOME env variable is in the path.

2004-11-25  Gary Cramblitt (PhantomsDad)
        * Add Finnish Male voice (http://www.ling.helsinki.fi/suopuhe/download/)
        * Improve throughput slightly by emitting Text Started signal after playback has begun.

2004-11-24  Gary Cramblitt (PhantomsDad)
        * Add overall Speed control to KTTSMgr Audio tab.  This permits to speed up speech
          even if the synth does not support it.  Must have sox installed for this to work.
        * Add Speed and Pitch controls to Epos plugin.  Also set language.
        * Better Speed adjustment for HTS voices.

2004-11-23  Gary Cramblitt (PhantomsDad)
        * Add support for OGI English and Spanish voices.
        * Update Handbook.
        * Better Spanish translations for voice names.

2004-11-22  Gary Cramblitt (PhantomsDad)
        * Add support for IMS German Festival.
        * Update Handbook.

2004-11-21  Gary Cramblitt (PhantomsDad)
        * Add volume control to Festival Interactive.
        * Accelerators for Festival Interactive configuration dialog.
        * HTS voices only support Volume (not Speed or Pitch)
        * Talker Codes reflect volume setting.

2004-11-20  Gary Cramblitt (PhantomsDad)
        * Add pitch control to Festival Interactive.
        * GStreamer plugin.

2004-11-17  Gary Cramblitt (PhantomsDad)
        * Bug fix.  Hosed Talker in KTTSMgr after removing a Talker and clicking Cancel.
        * In KTTSMgr no longer record LastTalkerID in config file; compute at load time instead.
        * Change Talker tab in KTTSMgr to "standard" layout.
        * Bug fix.  Talker matching.  Tended to pick last talker no matter what.

2004-11-13  Gary Cramblitt (PhantomsDad)
        * Fix.  Nothing happens when clicking Configure button for Festival Interactive