@@ -1,3 +1,7 @@
+2004-11-27  Gary Cramblitt (PhantomsDad)
+        * Extremely rudimentary support for SSML/Sable using FestivalInt plugin.  If it works for
+          you, it will be minor miracle.
+
 2004-11-26  Gary Cramblitt (PhantomsDad)
         * Slight throughput improvement by eliminating pause at start of each Festival utterance.
         * Bug fix.  Can find synthesizers when HOME env variable is in the path.
